# bridged-demo

./: .env.example  .gitignore  Dockerfile  README.md  RECRUITER_DEMO_GUIDE.md  assignment.txt  fastapi_app.py  frontend_demo.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  simple_agent.py  simple_api.py  simple_frontend.py  test_comprehensive_demo.py
apps/: __init__.py  fastapi_app.py  frontend.py
config/: __init__.py  settings.py
data/: pinecone_data_both_date.json  pinecone_data_separate_date.json  pinecone_data_unified_date.json  processed_data_separate.csv  processed_data_unified.csv  sample_data.csv
docs/: README.md  brownie-points.md  date-query-improvements.md  examples.md  operators.md  testing.md
documentation/: README.md  architecture.md  brownie-points.md  examples.md  implementation-details.md  testing.md  workflow.md
scripts/: run-with-pip.bat  run-with-pip.sh  run-with-poetry.bat  run-with-poetry.sh  run-with-uv.bat  run-with-uv.sh
src/: __init__.py  agent.py  api.py  pinecone_client.py
tests/: __init__.py  test_api.py  test_simple_agent.py
